--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -37,6 +38,7 @@ allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
 allow 107.172.13.143;
+allow 107.172.31.146;
 allow 107.172.31.165;
 allow 107.174.138.172;
 allow 107.174.231.197;
@@ -148,7 +150,6 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
-allow 155.4.102.252;
 allow 156.146.63.143;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -532,7 +533,6 @@ allow 185.246.189.99;
 allow 185.246.86.197;
 allow 185.247.184.105;
 allow 185.247.184.33;
-allow 185.252.232.218;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
@@ -557,7 +557,6 @@ allow 189.147.251.136;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
-allow 191.252.220.31;
 allow 191.96.165.34;
 allow 192.210.255.181;
 allow 192.42.116.13;
@@ -653,6 +652,7 @@ allow 193.35.18.105;
 allow 193.35.18.49;
 allow 193.35.18.77;
 allow 194.15.112.133;
+allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.195.120.132;
@@ -728,6 +728,7 @@ allow 2001:678:e3c::a;
 allow 2001:678:e3c::b;
 allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
+allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -808,7 +809,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:9b1:c300:3044::610;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -1585,7 +1585,6 @@ allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
-allow 2a0e:fa00:0:d0::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1627,8 +1626,8 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.222.120.69;
 allow 35.0.127.52;
-allow 35.169.232.222;
 allow 35.240.241.135;
 allow 3.67.194.114;
 allow 37.1.201.144;
@@ -1697,7 +1696,6 @@ allow 45.80.158.27;
 allow 45.80.208.123;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.9.148.219;
 allow 45.9.150.103;
 allow 45.9.150.130;
 allow 45.92.1.74;
@@ -1744,7 +1742,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1756,7 +1753,6 @@ allow 5.255.117.56;
 allow 5.255.124.150;
 allow 5.255.125.196;
 allow 5.255.125.41;
-allow 5.255.127.222;
 allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
@@ -1880,6 +1876,7 @@ allow 91.139.160.150;
 allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.145.116;
+allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
@@ -1945,6 +1942,7 @@ allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
+allow 96.27.198.133;
 allow 96.42.26.63;
 allow 96.66.15.152;
 allow 98.128.173.33;
