--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -114,7 +115,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -151,6 +151,7 @@ allow 152.89.233.169;
 allow 155.4.102.252;
 allow 156.146.63.143;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -268,6 +269,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -714,7 +716,6 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
-allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -806,7 +807,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -990,6 +990,7 @@ allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
+allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8100:400::9;
@@ -1267,6 +1268,7 @@ allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 allow 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
+allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
@@ -1374,6 +1376,7 @@ allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
+allow 2a07:5900::253;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
@@ -1630,7 +1633,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.223.203.198;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1701,6 +1703,7 @@ allow 45.95.202.48;
 allow 46.166.139.111;
 allow 46.182.21.248;
 allow 46.226.164.14;
+allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
 allow 46.41.150.103;
@@ -1775,7 +1778,6 @@ allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
-allow 72.211.49.235;
 allow 74.207.248.172;
 allow 74.82.47.194;
 allow 77.105.146.42;
@@ -1791,6 +1793,7 @@ allow 77.48.28.236;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
+allow 77.91.85.147;
 allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.102.204.248;
@@ -1872,6 +1875,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.217.219.253;
 allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
@@ -1879,9 +1883,7 @@ allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.119.126.161;
 allow 92.205.129.119;
-allow 92.243.24.163;
 allow 92.246.84.133;
-allow 92.249.48.135;
 allow 93.123.12.112;
 allow 93.90.74.31;
 allow 93.95.225.141;
@@ -1902,7 +1904,6 @@ allow 94.103.124.46;
 allow 94.103.124.90;
 allow 94.103.124.91;
 allow 94.103.124.98;
-allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.112.22;
