--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -690,6 +690,7 @@ allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
+allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:df00:0:255::194;
